trying thing in CSS

--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <ul>
+                <li>About Me</li>
+                <li>Work</li>
+                <li>Contact Me</li>
+                <li>Resume</li>
+              </ul>
+              <section class="backgorund-nav-card">
+<div>
+    <section class="work">
+        
+    </section>
+</div>
+              </section>
+        </nav>
+        <!-- <section class="backgroundcard"> -->
+
+        </section>
+    </header>
     
 </body>
 </html>
